<resources>
    <string name="app_name">hWork6–1</string>
    <string name="editTextFullNameHint">Full Name</string>
    <string name="editTextUserNameHint">User Name</string>
    <string name="editTextEmailHint">Email</string>
    <string name="editTextPasswordHint">Password</string>
    <string name="editTextPassword2Hint">Re-type Password</string>
    <string name="textViewGenderText">Gender</string>
    <string name="radioButtonFemale">Female</string>
    <string name="radioButtonMale">Male</string>
    <string name="buttonRegisterText">Register</string>
    <string name="buttonShowInfoText">Show Info</string>
    <string name="textViewFullNameText"> </string>
    <string name="textViewUserNameText"> </string>
    <string name="textViewEmailText"> </string>
    <string name="textViewPasswordText"> </string>
    <string name="textViewGender2Text"> </string>
    <string name="buttonHideInfoText">Hide Info</string>

</resources>